# gnome-break-timer

./: .buildconfig  .bzrignore  .editorconfig  .gitignore  .gitlab-ci.yml  AUTHORS  Makefile.am  NEWS  README  README.md  autogen.sh  base.am  buildj.py  config.vala.in  config.vapi  configure.ac  debug_configure.sh  gnome-break-timer.doap  gnome-break-timer.in  gnome-break-timer.sh.in  meson.build  meson_options.txt  org.gnome.BreakTimer.appdata.xml  org.gnome.BreakTimer.json  org.gnome.BreakTimer.local.json  project.yaml  wscript
common/: BreakHelperRemote.vala  HelperStatus.vala  IBreakHelper.vala  ISessionStatus.vala  Makefile.am  NaturalTime.vala  SessionStatus.vala  common.am  meson.build
data/: Makefile.am  brainbreak-autostart.desktop.in  brainbreak-helper-autostart.desktop  brainbreak-helper.desktop  brainbreak-settings.desktop  brainbreak-settings.desktop.in  brainbreak.desktop.in  brainbreak.gresource.xml  gnome-break-timer-autostart.desktop.in  gnome-break-timer-service.desktop.in  gnome-break-timer.appdata.xml.in  gnome-break-timer.desktop.in  gnome-break-timer.gresource.xml  meson.build  org.brainbreak.gschema.xml  org.brainbreak.gschema.xml.in  org.gnome.BreakTimer.Helper-autostart.desktop.in  org.gnome.BreakTimer.Helper-autostart.desktop.in.in  org.gnome.BreakTimer.Helper.desktop.in.in  org.gnome.BreakTimer.appdata.xml.in  org.gnome.BreakTimer.appdata.xml.in.in  org.gnome.BreakTimer.desktop.in  org.gnome.BreakTimer.desktop.in.in  org.gnome.BreakTimer.gresource.xml.in  org.gnome.BreakTimer.service.in  org.gnome.break-timer.gschema.xml.in  settings-panels.ui  style.css
data/applications/: meson.build  org.gnome.BreakTimer.Daemon.desktop.in  org.gnome.BreakTimer.Daemon.desktop.in.in  org.gnome.BreakTimer.Settings.desktop.in  org.gnome.BreakTimer.Settings.desktop.in.in  org.gnome.BreakTimer.desktop.in  org.gnome.BreakTimer.desktop.in.in
data/autostart/: meson.build  org.gnome.BreakTimer.Daemon.desktop.in.in  org.gnome.BreakTimer.desktop.in  org.gnome.BreakTimer.desktop.in.in
data/dbus/: meson.build  org.gnome.BreakTimer.Daemon.service.in  org.gnome.BreakTimer.Helper.service.in  org.gnome.BreakTimer.Settings.service.in  org.gnome.BreakTimer.service.in
data/gresource/: meson.build  org.gnome.BreakTimer.gresource.xml
data/gschema/: meson.build  org.gnome.BreakTimer.gschema.xml.in  org.gnome.BreakTimer.gschema.xml.in.in
data/icons/: Makefile.am  meson.build
data/metainfo/: meson.build  org.gnome.BreakTimer.metainfo.xml.in  org.gnome.BreakTimer.metainfo.xml.in.in
data/ui/: meson.build  settings-panels.blp
helper/: ActivityMonitor.vala  ActivityTimerBreak.vala  Break.vala  BreakFocusManager.vala  BreakManager.vala  BreakOverlay.vala  BreakView.vala  CleverTimeout.vala  Countdown.vala  FocusManager.vala  HelperApplication.vala  IFocusManager.vala  Magic.vala  Makefile.am  MicroBreak.vala  MicroBreakView.vala  RestBreak.vala  RestBreakView.vala  ScreenOverlay.vala  SessionStatus.vala  TimerBreak.vala  TimerBreakStatusWidget.vala  TimerBreakView.vala  UIFragment.vala  UIManager.vala  helper.am  main.vala  meson.build  project.yaml
helper/activity-monitor/: ActivityMonitor.vala  Makefile.am  MutterActivityMonitorBackend.vala  X11ActivityMonitorBackend.vala  activity-monitor.am  c_x11_activity_monitor_backend-xcb.c  c_x11_activity_monitor_backend.c
helper/break/: Break.vala  BreakController.vala  BreakModel.vala  BreakType.vala  BreakView.vala  TimerBreak.vala  TimerBreakController.vala  TimerBreakModel.vala  TimerBreakStatusWidget.vala  TimerBreakType.vala  TimerBreakView.vala
helper/microbreak/: MicroBreak.vala  MicroBreakController.vala  MicroBreakModel.vala  MicroBreakType.vala  MicroBreakView.vala
helper/restbreak/: RestBreak.vala  RestBreakController.vala  RestBreakModel.vala  RestBreakType.vala  RestBreakView.vala
helper/util/: CleverTimeout.vala  Countdown.vala  Makefile.am  PausableTimeout.vala  SimpleFocusManager.vala  StatefulTimer.vala  Util.vala  util.am
settings/: ApplicationPanel.vala  BreakManager.vala  BreakPanel.vala  BreakSettingsDialog.vala  BreakSettingsPanel.vala  BreakType.vala  CircleCounter.vala  IBreakHelper.vala  MainWindow.vala  Makefile.am  MicroBreakType.vala  NaturalTime.vala  OverlayArrow.vala  Panel.vala  QuietMode.vala  QuietModePanel.vala  RestBreakType.vala  SettingsApplication.vala  SettingsDialog.vala  SettingsPanel.vala  TimeChooser.vala  TimerBreakPanel.vala  TimerBreakSettingsPanel.vala  TimerBreakStatusPanel.vala  TimerBreakType.vala  TogglePanel.vala  WindowHeaderBar.vala  main.vala  meson.build  project.yaml  settings.am
src/: Application.vala  BrainBreak.vala  Break.vala  BreakManager.vala  BreakOverlay.vala  BreakView.vala  FocusManager.vala  Magic.vala  MicroBreak.vala  MicroBreakView.vala  PauseScheduler.vala  PauseView.vala  RestBreak.vala  RestBreakView.vala  RestScheduler.vala  RestView.vala  Scheduler.vala  SessionStatus.vala  TimerBreak.vala  TimerBreakOverlay.vala  TimerString.vala  UIManager.vala  config.vapi  magic_core.c  main.vala  meson.build
src/activity/: ActivityMonitor.vala  MutterActivityMonitorBackend.vala  UserActivity.vala
src/break/: BreakController.vala  BreakType.vala
src/common/: DynamicTimeout.vala  IBackgroundPortal.vala  IBreakDaemon.vala  IBreakHelper.vala  IBreakTimer.vala  IBreakTimer_TimerBreak.vala  IFreedesktopApplication.vala  IGnomeScreenSaver.vala  IMutterActivityMonitor.vala  IMutterIdleMonitor.vala  IPortalBackground.vala  IPortalRequest.vala  IScreenSaver.vala  ISessionStatus.vala  NaturalTime.vala  TimeUnit.vala  meson.build
src/daemon/: Application.vala  ApplicationContext.vala  BreakManager.vala  BreakManagerDBusObject.vala  DaemonApplication.vala  SessionStatus.vala  UIFragment.vala  UIManager.vala  main.vala  meson.build
src/helper/: BreakManager.vala  HelperApplication.vala  SessionStatus.vala  UIFragment.vala  UIManager.vala  meson.build
src/microbreak/: MicroBreakType.vala
src/restbreak/: RestBreakType.vala
src/settings/: Application.vala  BreakInfoPanel.vala  (+28 more)
tests/: Makefile.am  UnitTestSuite.vala  meson.build  tests.vala  tests_common.vala
(+166 files in other folders)
